# school-picker-starlette-server

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 1c6351c981c3_added_users_table.py  3c214ce7aee9_added_token_blacklist.py
school_picker_starlette_server/: app.py  auth.py  db.py  sql.py  tokens.py  validation.py
school_picker_starlette_server/graphql/: __init__.py  schema.py
school_picker_starlette_server/graphql/resolvers/: query.py
school_picker_starlette_server/graphql/resolvers/mutation/: __init__.py  tokens.py  users.py
school_picker_starlette_server/graphql/typedefs/: mutation.graphql  query.graphql  tokens.graphql  users.graphql
scripts/: dev.sh  make_migrations.sh  run.sh
tests/: test_school_picker_starlette_server.py
