[tool.poetry]
name = "school-picker-starlette-server"
version = "0.1.0"
description = ""
authors = ["Aphosis <aphosis.github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = "^0.11.8"
itsdangerous = "^1.1.0"
ujson = "^3.2.0"
gunicorn = "^20.0.4"
ariadne = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
