[tool.poetry]
name = "school-picker-starlette-server"
version = "0.1.0"
description = ""
authors = ["Aphosis <aphosis.github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = {extras = ["watchgodreload"], version = "^0.11.8"}
itsdangerous = "^1.1.0"
gunicorn = "^20.0.4"
ariadne = "^0.12.0"
sqlalchemy = "^1.3.19"
databases = "^0.3.2"
alembic = "^1.4.3"
asyncpg = "^0.21.0"
psycopg2 = "^2.8.6"
pydantic = {extras = ["email"], version = "^1.6.1"}
argon2-cffi = "^20.1.0"
password_strength = "^0.0.3"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
